--- a/frontend/src/styles/theme.css
+++ b/frontend/src/styles/theme.css
@@ -32,8 +32,8 @@
 
   /* Highlight */
   --color-highlight-1: #C432F8;
-  --color-highlight-2: #FF8555;
-  --color-highlight-3: #FFA24D;
+  --color-highlight-2: #DD85FA;
+  --color-highlight-3: #E9AEFB;
   --color-highlight-4: #FFBC5D;
   --color-highlight-5: #FFE2A5;
   --color-highlight-6: #FFEAE7;
