--- a/frontend/src/app/posts/Posts.module.css
+++ b/frontend/src/app/posts/Posts.module.css
@@ -4,22 +4,22 @@
   align-items: center;
   justify-content: center;
 
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .duration h3 {
-  font-size: var(--font-2xl);
+  font-size: var(--font-3xl);
   color: var(--color-dark-300);
 }
 
 .duration p {
-  font-size: var(--font-lg);
-  color: var(--color-dark-300);
+  font-size: var(--font-mdm);
+  color: var(--color-dark-400);
 }
 
 .heading {
   text-align: center;
-  font-size: var(--font-2xl);
+  font-size: var(--font-3xl);
   color: var(--color-dark-300);
   margin-bottom: 1rem;
 }
@@ -34,6 +34,7 @@
 }
 
 .card {
+  position: relative;
   background-color: var(--color-neutral-500);
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -43,6 +44,10 @@
   width: 100%;
   transition: transform 0.2s, box-shadow 0.2s;
   margin-bottom: 1rem;
+}
+
+.card:nth-last-child(-n+2) {
+  margin-bottom: 0;
 }
 
 .imageWrapper {
@@ -89,6 +94,23 @@
   text-align: center;
   font-size: var(--font-md);
   color: var(--color-dark-400);
+}
+
+.flag {
+  position: absolute;
+  height: 40px;
+  width: 100px;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+  border-radius: 8px;
+  background-color: var(--color-error-1);
+  color: #fff;
+  font-size: var(--font-md);
+  font-weight: bold;
 }
 
 @media (min-width: 1024px) {
