--- a/frontend/src/app/posts/summary/Summary.module.css
+++ b/frontend/src/app/posts/summary/Summary.module.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 2rem;
+  padding-bottom: 1rem;
 }
 
 .summarySection h2 {
