--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -28,6 +28,7 @@
 }
 
 .logo_link h3 {
+  display: none;
 	font-size: var(--font-3xl);
 	color: var(--color-highlight-1);
 }
@@ -73,4 +74,10 @@
 .navigation a.selected::after {
   transform: scaleX(1);
   transform-origin: left;
+}
+
+@media (min-width: 1024px) {
+  .logo_link h3 {
+    display: block;
+  }
 }
