--- a/frontend/src/ui-components/Pagination/Pagination.module.css
+++ b/frontend/src/ui-components/Pagination/Pagination.module.css
@@ -6,7 +6,7 @@
 }
 
 .pageButton {
-  width: 46px;
+  width: 35px;
   box-sizing: border-box;
   border: none;
   font-size: 1.4rem;
@@ -72,4 +72,10 @@
 .active {
   background-color: var(--color-highlight-1);
   color: #fff;
+}
+
+@media (min-width: 1024px) {
+  .pageButton {
+    width: 46px;
+  }
 }
